[package]
name = "graphql_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["mysql", "r2d2"] }
dotenvy = "0.15.7"
juniper = "0.15.11"
juniper_rocket = "0.8.2"
rocket = { version = "=0.5.0-rc.2" }